sample/retrieveUnpackaged/objects/Portal_Marketing_Page__c.object
<CustomObject>
    <description>Contains information about the Marketing pages that are displayed when a user first logs into the Home page of the Portal</description>
    <fields>
        <fullName>Button_Label__c</fullName>
        <description>The label which will be displayed on the button that takes the user to the appropriate page.</description>
        <inlineHelpText>The label which will be displayed on the button that takes the user to the appropriate page.</inlineHelpText>
        <label>Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Button_URL__c</fullName>
        <description>When the button is pressed, the user is taken to this URL (in a new page).</description>
        <inlineHelpText>When the button is pressed, the user is taken to this URL (in a new page).</inlineHelpText>
        <label>Button URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Button_Label__c</fullName>
        <description>The label which will be displayed on the button that closes the marketing page.</description>
        <inlineHelpText>The label which will be displayed on the button that closes the marketing page.</inlineHelpText>
        <label>Close Button Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria_Logic__c</fullName>
        <description>Indicates the logic for the criteria rules</description>
        <inlineHelpText>(1 AND 2) OR 3</inlineHelpText>
        <label>Criteria Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Frequency_Type__c</fullName>
        <description>How often the marketing page is to be displayed.  If Once only is selected, Display Frequency Value is ignored.</description>
        <inlineHelpText>Select how often the marketing page is to be displayed.  If Once only is selected, Display Frequency Value is ignored, otherwise, you need to enter a Display Frequency Value.</inlineHelpText>
        <label>Display Frequency Type</label>
        <picklist>
            <picklistValues>
                <fullName>Once Only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Every # Logins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every # Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Frequency_Value__c</fullName>
        <description>How often the marketing page is to be displayed.  If Once only is selected, this value is ignored</description>
        <inlineHelpText>Enter how often the marketing page is to be displayed.  If Once only is selected, this value is ignored, otherwise, you need to enter this value.</inlineHelpText>
        <label>Display Frequency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Maximum_Times__c</fullName>
        <description>The maximum number of times the page is displayed to any single user.</description>
        <inlineHelpText>The maximum number of times the page is displayed to any single user.</inlineHelpText>
        <label>Display Maximum Times</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Opt_Out_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether to display the link where the user can request not to display this Marketing Page again.</description>
        <inlineHelpText>Indicates whether to display the link where the user can request not to display this Marketing Page again.</inlineHelpText>
        <label>Display Opt Out Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Timestamp__c</fullName>
        <description>The date/time when to stop showing the marketing page to the users.</description>
        <inlineHelpText>Select the date and time for when the marketing page should no longer be displayed to users.</inlineHelpText>
        <label>End Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HTML__c</fullName>
        <description>The HTML code for the marketing page.</description>
        <inlineHelpText>Enter the HTML code which will be displayed in the splash page.</inlineHelpText>
        <label>HTML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Page_Height__c</fullName>
        <description>The height of the marketing splash page.</description>
        <inlineHelpText>The height of the marketing splash page.</inlineHelpText>
        <label>Page Height</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Page_Title__c</fullName>
        <description>The text which is displayed at the top of the market page dialog</description>
        <inlineHelpText>The text which is displayed at the top of the market page dialog</inlineHelpText>
        <label>Page Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Width__c</fullName>
        <description>The width of the marketing splash page.</description>
        <inlineHelpText>The width of the marketing splash page.</inlineHelpText>
        <label>Page Width</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The priority of the marketing page, just in case a user matches multiple campaigns.</description>
        <inlineHelpText>Enter the priority number. The value should be unique for all active marketing pages.  For random, enter 0.</inlineHelpText>
        <label>Priority</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Timestamp__c</fullName>
        <description>The date/time when to start showing the marketing page to the users.</description>
        <inlineHelpText>Select the start date and time for when the marketing page should be displayed to users.</inlineHelpText>
        <label>Start Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Portal Marketing Page</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Timestamp__c</columns>
        <columns>End_Timestamp__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Current_and_Future</fullName>
        <columns>Priority__c</columns>
        <columns>NAME</columns>
        <columns>Start_Timestamp__c</columns>
        <columns>End_Timestamp__c</columns>
        <columns>Display_Frequency_Type__c</columns>
        <columns>Display_Frequency_Value__c</columns>
        <columns>Display_Maximum_Times__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_Timestamp__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>All Current and Future</label>
    </listViews>
    <nameField>
        <label>Portal Marketing Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Marketing Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>